fixed alignment issues

--- a/src/pages/CountryPage.css
+++ b/src/pages/CountryPage.css
@@ -44,11 +44,13 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  width: 100%;
 }
 
 #borderGrid {
   display: grid;
-  grid-template-columns: repeat(3, 100px);
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   column-gap: 10px;
   row-gap: 11px;
   grid-auto-rows: auto;
@@ -57,7 +59,7 @@
 
 .border {
   margin: 0;
-  padding: 8px 50px;
+  padding: 8px 16px;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -70,8 +72,13 @@
 
 .boldBorders {
   font-size: var(--font-size-small);
-  padding-top: 5px;
-  margin: 0;
+  margin: 5px 0 0;
+  width: 180px;
+}
+
+#noBorder {
+  margin: 5px 0 0 -20px;
+  font-size: 16px;
 }
 
 @media screen and (max-width: 1440px) {
@@ -95,6 +102,10 @@
   .boldBorders {
     font-size: var(--font-size-xsmall);
   }
+
+  #noBorder {
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 1080px) {
@@ -115,17 +126,6 @@
 
   #borders {
     flex-direction: row;
-  }
-
-  #borderGrid {
-    padding-left: 15px;
-  }
-
-  #borderGrid {
-    grid-template-columns: repeat(3, 40px);
-    column-gap: 70px;
-    padding-left: 15px;
-    padding-top: 0;
   }
 }
 
@@ -153,6 +153,10 @@
   #borderGrid {
     padding-left: 0;
     padding-top: 15px;
+  }
+
+  #noBorder {
+    margin: 0;
   }
 }
 
